objects/Program_Relationship__c.object
<CustomObject>
    <description>This object holds the Collection Perspective Child definitions.
Any given Program or Program Collection can be related to a Program Collection to express a relationship. That relationship is further defined by its effective dates.</description>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Employee_User_Record__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contact.Employee_User_Record__r.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Collection Perspective Children</relationshipLabel>
        <relationshipName>Program_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPC_Name__c</fullName>
        <formula>LEFT(IF( 
NOT(ISBLANK(Program__c)), 
Program_Perspective__r.Name + &quot;-&quot; + Program__r.Name, 
IF( 
NOT(ISBLANK(Program_Group__c)), 
Program_Perspective__r.Name + &quot;-&quot; + Program_Group__r.Name, 
Program_Perspective__r.Name 
) 
),80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPC Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>CPC{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Effective_End__c</fullName>
        <label>Effective End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start__c</fullName>
        <label>Effective Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Perspective__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; +  Program_Perspective__r.Perspective__c, Program_Perspective__r.Perspective__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perspective</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>You must supply a Program OR a Program Group</inlineHelpText>
        <label>Program Collection</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Program Collection you have selected is inactive.</errorMessage>
            <filterItems>
                <field>Program_Group__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program_Group__c</referenceTo>
        <relationshipLabel>Collection Perspective Children</relationshipLabel>
        <relationshipName>Program_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Perspective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collection Perspective</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Collection Perspective you have selected is inactive.</errorMessage>
            <filterItems>
                <field>Program_Perspective__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program_Perspective__c</referenceTo>
        <relationshipLabel>Collection Perspective Children</relationshipLabel>
        <relationshipName>Program_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>You must supply a Program OR a Program Group</inlineHelpText>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Collection Perspective Parent</relationshipLabel>
        <relationshipName>Program_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_In_Use__c</fullName>
        <formula>Program_Perspective__r.In_use_Plans_Direct__c + Program_Perspective__r.In_use_Plans_Indirect__c + Program_Perspective__r.In_use_Staff_Direct__c + Program_Perspective__r.In_use_Staff_Indirect__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total In Use</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Collection Perspective Child</label>
    <nameField>
        <label>Collection Perspective Child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collection Perspective Children</pluralLabel>
    <recordTypes>
        <fullName>Program</fullName>
        <active>true</active>
        <label>Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program_Collection</fullName>
        <active>true</active>
        <label>Program Collection</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VR_Appropriate_Effective_Dates</fullName>
        <active>true</active>
        <description>Effective End Date Should be greater then Effective Start Date</description>
        <errorConditionFormula>Effective_Start__c &gt; Effective_End__c</errorConditionFormula>
        <errorDisplayField>Effective_Start__c</errorDisplayField>
        <errorMessage>The Effective Start date cannot be later than the Effective End date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Earliest_Effective_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Program_Perspective__r.Effective_Start__c &gt;  Effective_Start__c</errorConditionFormula>
        <errorDisplayField>Effective_Start__c</errorDisplayField>
        <errorMessage>The Effective Start date cannot be earlier than the Collection Perspective start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Program_And_Program_Group</fullName>
        <active>true</active>
        <description>Child Program Collection and Child Program are both empty</description>
        <errorConditionFormula>OR(
	AND( 
		ISBLANK(Program_Group__c),
		ISBLANK(Program__c)
	),
	AND(
		NOT(ISBLANK(Program_Group__c)),
		NOT(ISBLANK(Program__c))
	)
)</errorConditionFormula>
        <errorDisplayField>Program__c</errorDisplayField>
        <errorMessage>Either a Program Collection or an individual Program must be selected as the child of the relationship</errorMessage>
    </validationRules>
</CustomObject>